use URLON stringfiy json

--- a/client/index.pug
+++ b/client/index.pug
@@ -13,5 +13,6 @@ html(class="no-js", lang="zh")
           header
             h1 json server
           textarea#editor(placeholder='输入 json 或 json schema')
+          a#output(href='#') #
         script(src=htmlWebpackPlugin.files.chunks.main.entry)
 
